[gd_scene load_steps=5 format=3 uid="uid://bxprnu2uijnhj"]

[ext_resource type="Script" path="res://scripts/back/main.gd" id="1_pxi0j"]
[ext_resource type="PackedScene" uid="uid://00r08b5jr0ki" path="res://scenes/back/client.tscn" id="3_wvk0r"]
[ext_resource type="PackedScene" uid="uid://cyv5wvqsa34yg" path="res://scenes/back/server.tscn" id="4_u47lj"]
[ext_resource type="PackedScene" uid="uid://phqqbkxeyk7u" path="res://scenes/front/mainmenu.tscn" id="4_ywqig"]

[node name="main" type="Node"]
script = ExtResource("1_pxi0j")

[node name="HUD" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="header" type="Label" parent="HUD"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -939.0
offset_top = 11.0
offset_right = -554.0
offset_bottom = 79.0
grow_horizontal = 2

[node name="Client" parent="." instance=ExtResource("3_wvk0r")]
unique_name_in_owner = true

[node name="Server" parent="." instance=ExtResource("4_u47lj")]
unique_name_in_owner = true

[node name="MainMenu" parent="." instance=ExtResource("4_ywqig")]
unique_name_in_owner = true

[node name="BecomeHost" type="Button" parent="."]
unique_name_in_owner = true
z_index = 1
offset_left = 1516.0
offset_top = 823.0
offset_right = 1869.0
offset_bottom = 900.0
theme_override_font_sizes/font_size = 50
text = "start as server"

[node name="JoinAsClient" type="Button" parent="."]
unique_name_in_owner = true
z_index = 1
offset_left = 1519.0
offset_top = 943.0
offset_right = 1853.0
offset_bottom = 1020.0
theme_override_font_sizes/font_size = 50
text = "start as client"

[connection signal="pressed" from="BecomeHost" to="." method="_on_start_as_server_pressed"]
[connection signal="pressed" from="JoinAsClient" to="." method="_on_start_as_client_pressed"]
